<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_tweet_preview_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimary"
                android:text="Search by id"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_xml_tweet_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimary"

                android:text="@string/xml_tweets_activity"

                android:textColor="@android:color/white"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_tweet_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimary"

                android:text="@string/tweets_activity"
                android:textColor="@android:color/white"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_unique_tweet_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/unqiue_tweets"

                android:textColor="@android:color/white"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_timelines_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/button_timelines_activity"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/button_fixed_timeline_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/fixed_timeline"
                android:textColor="@android:color/white"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_refresh_timeline_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/refresh_timeline"
                android:textColor="@android:color/white"

                android:visibility="gone" />

            <Button
                android:id="@+id/button_tweet_pojo_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/tweet_pojo"
                android:textColor="@android:color/white"
                android:visibility="gone" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>
